// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AvatarCombo renders Avatar and its badge 1`] = `
.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #9785F2;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c2 {
  color: #FFFFFF;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c5 .c7 {
  height: 20px;
  width: 20px;
}

.c0 {
  position: relative;
  height: 40px;
  width: 40px;
}

.c0 .c4 {
  bottom: -4px;
  right: -4px;
  position: absolute;
  height: 20px;
  width: 20px;
}

.c0 .c4 .c7 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="palette.purple400"
    >
      JS
    </div>
    <img
      className="c3"
      color="palette.purple400"
      src="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
    />
  </div>
  <div
    className="c4 c5"
  >
    <div
      className="c6 c7 "
      color="palette.purple300"
      size="1rem"
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          User
        </title>
        <path
          d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2zm0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1zM12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`AvatarCombo renders Avatar initials and badge with Code icon 1`] = `
.c6 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #9785F2;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c2 {
  color: #FFFFFF;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c5 .c7 {
  height: 20px;
  width: 20px;
}

.c0 {
  position: relative;
  height: 40px;
  width: 40px;
}

.c0 .c4 {
  bottom: -4px;
  right: -4px;
  position: absolute;
  height: 20px;
  width: 20px;
}

.c0 .c4 .c7 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2"
      color="palette.purple400"
    >
      JS
    </div>
    <img
      className="c3"
      color="palette.purple400"
      src="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
    />
  </div>
  <div
    className="c4 c5"
  >
    <div
      className="c6 c7 "
      color="palette.purple300"
      size="1rem"
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          User
        </title>
        <path
          d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2zm0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1zM12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`AvatarCombo renders AvatarIcon and badge if user is not available and updates icon if passed. 1`] = `
.c2 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #9785F2;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #9785F2;
  background-color: #FFFFFF;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c1 .c3 {
  height: 20px;
  width: 20px;
}

.c5 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c5 .c3 {
  height: 20px;
  width: 20px;
}

.c0 {
  position: relative;
  height: 40px;
  width: 40px;
}

.c0 .c4 {
  bottom: -4px;
  right: -4px;
  position: absolute;
  height: 20px;
  width: 20px;
}

.c0 .c4 .c3 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <div
      className="c2 c3 "
      color="palette.purple300"
      size="1rem"
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          User
        </title>
        <path
          d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2zm0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1zM12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
  <div
    className="c4 c5"
  >
    <div
      className="c2 c3 "
      color="palette.purple300"
      size="1rem"
    >
      <svg
        fill="currentColor"
        height="100%"
        viewBox="0 0 24 24"
        width="100%"
      >
        <title>
          User
        </title>
        <path
          d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2zm0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1zM12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
          fill="currentColor"
        />
      </svg>
    </div>
  </div>
</div>
`;

exports[`AvatarIcon renders  1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #9785F2;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 .c2 {
  height: 20px;
  width: 20px;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c0 .c2 {
  height: 20px;
  width: 20px;
}

.c4 .c2 {
  height: 20px;
  width: 20px;
}

.c5 .c6 .c2 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    className="c1 c2 "
    color="palette.purple300"
    size="1rem"
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        User
      </title>
      <path
        d="M12 5.9a2.1 2.1 0 110 4.2 2.1 2.1 0 010-4.2zm0 9c2.97 0 6.1 1.46 6.1 2.1v1.1H5.9V17c0-.64 3.13-2.1 6.1-2.1zM12 4C9.79 4 8 5.79 8 8s1.79 4 4 4 4-1.79 4-4-1.79-4-4-4zm0 9c-2.67 0-8 1.34-8 4v3h16v-3c0-2.66-5.33-4-8-4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`AvatarIcon renders different icon if specified 1`] = `
.c1 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #9785F2;
  width: 1rem;
  height: 1rem;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 .c2 {
  height: 20px;
  width: 20px;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  background-color: #FFFFFF;
  color: #9785F2;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  border: solid 1px currentColor;
}

.c0 .c2 {
  height: 20px;
  width: 20px;
}

.c4 .c2 {
  height: 20px;
  width: 20px;
}

.c5 .c6 .c2 {
  height: 14px;
  width: 14px;
}

<div
  className="c0"
>
  <div
    className="c1 c2 "
    color="palette.purple300"
    size="1rem"
  >
    <svg
      fill="currentColor"
      height="100%"
      viewBox="0 0 24 24"
      width="100%"
    >
      <title>
        Code
      </title>
      <path
        d="M9.4 16.6L4.8 12l4.6-4.6L8 6l-6 6 6 6 1.4-1.4zm5.2 0l4.6-4.6-4.6-4.6L16 6l6 6-6 6-1.4-1.4z"
        fill="currentColor"
      />
    </svg>
  </div>
</div>
`;

exports[`AvatarUser shows initials if has broken url as avatar_url 1`] = `
.c2 {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c1 {
  color: #FFFFFF;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="palette.purple400"
  >
    JS
  </div>
  <img
    className="c2"
    color="palette.purple400"
    src="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
  />
</div>
`;

exports[`AvatarUser shows initials if it has null as avatar_url  1`] = `
.c1 {
  color: #FFFFFF;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="palette.purple400"
  >
    JS
  </div>
</div>
`;

exports[`AvatarUser shows user profile picture if it has good avatar_url  1`] = `
.c2 {
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

.c1 {
  color: #FFFFFF;
}

.c0 {
  border: 0;
  box-sizing: border-box;
  font: inherit;
  font-size: 100%;
  margin: 0;
  padding: 0;
  vertical-align: baseline;
  color: #6C43E0;
  font-size: 0.875rem;
  height: 40px;
  width: 40px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 100%;
  display: grid;
  justify-items: center;
  overflow: hidden;
  background: currentColor;
  position: relative;
}

<div
  className="c0"
>
  <div
    className="c1"
    color="palette.purple400"
  >
    JS
  </div>
  <img
    className="c2"
    color="palette.purple400"
    src="https://gravatar.lookercdn.com/avatar/e8ebbdf1a64411721503995731?s=156&d=blank"
  />
</div>
`;
